--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 <link rel="stylesheet" href="../assets/css/publication.css">
+<link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+
   {%- include head.html -%}
 
   <body>
