included talks, links to papers' video

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,6 +2,7 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 <link rel="stylesheet" href="../assets/css/publication.css">
 <link rel="stylesheet" href="../assets/css/experience.css">
+<link rel="stylesheet" href="../assets/css/talks.css">
 <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 
   {%- include head.html -%}
