--- a/assets/css/publication.css
+++ b/assets/css/publication.css
@@ -34,3 +34,20 @@
 .publinks {
     font-size: 75%;
 }
+
+.drop-content {
+  display: none;
+  padding: 10px;
+  border: 1px solid #ddd;
+  margin-top: 10px;
+  background-color: #f9f9f9;
+}
+
+.drop-button {
+  cursor: pointer;
+  padding: 10px;
+  border: 1px solid #ddd;
+  background-color: #f5f5f5;
+  text-align: left;
+  width: 100%;
+}
