--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ layout: base
         </div>
         <p></p>
         <div class="meta-information">
-            <a href="mailto:siu-lun.chau@cispa.de">
+            <a href="mailto:a.siulun.chau@gmail.com">
                 Email
             </a>
             |
