--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: base
 
 <div class="home">
     <div>
-        <img src="../assets/img/group-members/siulun.jpg" alt="siu lun chau" width="100">
+        <img src="../assets/img/group-members/siulun2025.jpeg" alt="siu lun chau" width="100">
         <p>
     </div>
     <div class="introduction">
