--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: base
             <a href="https://github.com/Chau999">
                 Github
             </a> |
-            <a href="../assets/cv/academic_curriculum_vitae(old).pdf">
+            <a href="../assets/cv/alan_resume_new.pdf">
                 CV
             </a>
         </div>
