--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: base
             {{ page.position }}
         </div>
         <div class="location">
-            <a href="https://cispa.de/en">
+            <a href="https://www.ntu.edu.sg/computing">
                 {{ page.location }}
             </a>
         </div>
