big update including research statement

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,6 +38,9 @@ layout: base
             <a href="../assets/cv/alan_resume_new.pdf">
                 CV
             </a>
+            <a href="../assets/research_statement/research_statement.pdf">
+                Research statement
+            </a>
         </div>
     </div>
     <br>
